--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "csvtojson": "^2.0.10",
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "12.x"
