--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
+    "dropbox": "^8.2.0",
     "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
